--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <header class="container">
         <h2>Toast's Barnyard Roundup</h2>
-        <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do!</p>
+        <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all?</p>
         <figure>
             <img src="https://source.unsplash.com/a562ZEFKW8I/2000x1000" alt="Minimal landscape">
-            <figcaption>Benjamin Gaines <a href="https://kentuckybenjamin.github.io/">Christmas 2021</a></figcaption>
+            <figcaption><a href="https://kentuckybenjamin.github.io/">Benjamin Gaines</a> | Christmas 2021</figcaption>
         </figure>
 
     </header>
