--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going!</p>
         <figure>
             <img src="images/toast_rabbit_roundup.png" alt="Toasts Rabbit Roundup">
-            <figcaption><a href="https://kentuckybenjamin.github.io/">Benjamin Gaines</a> | Christmas 2021</figcaption>
+            <figcaption>From <a href="https://kentuckybenjamin.github.io/">Benjamin Gaines</a> | Merry Christmas, Sora!</figcaption>
         </figure>
 
     </header>
