added initial pico8 cartridge

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header class="container">
         <h2>Toast's Barnyard Roundup</h2>
-        <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going!</p>
+        <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going.</p>
         <figure>
             <a href="legend_of_toast.html"><img src="images/toast_rabbit_roundup.png" alt="Toasts Rabbit Roundup"></a>
             <figcaption>From <a href="https://kentuckybenjamin.github.io/">Benjamin Gaines</a> | Merry Christmas, Sora!</figcaption>
