--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Press Start 2P';
+            font-size: '18px';
+        }
+    </style>
 </head>
 
 <body>
     <header class="container">
-        <h2>Toast's Barnyard Roundup</h2>
+        <!-- <h2 style='font-family: Press Start 2P'>Toast's Barnyard Roundup</h2> -->
+        <p>------------------------</p>
+        <p>Toast's Barnyard Roundup</p>
+        <p>------------------------</p>
+        <br>
         <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going.</p>
         <figure>
             <a href="legend_of_toast.html"><img src="images/toast_rabbit_roundup.png" alt="Toasts Rabbit Roundup"></a>
