--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html data-theme="dark">
 
 <head>
+    <!-- mobile friendly  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- pico style   -->
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
