--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="container">
-        <h2 style='font-family: Press Start 2P'>Toast's Barnyard Roundup</h2>
+        <h2 style='font-family: Press Start 2P'>Toast's Rabbit Roundup</h2>
         <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going.</p>
         <figure>
             <a href="legend_of_toast.html"><img src="images/toast_rabbit_roundup.png" alt="Toasts Rabbit Roundup"></a>
