--- a/index.html
+++ b/index.html
@@ -4,23 +4,46 @@
     <!-- mobile friendly  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+
     <!-- pico style   -->
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+
+    <!-- google fonts continued  -->
+
+    <style>
+        body {
+            font-family: 'Roboto Mono', monospace;
+        }
+        
+        h2 {
+            font-family: 'Roboto Mono', monospace;
+        }
+    </style>
+
 </head>
 
 <body>
-    <header class="container">
-        <h2 style='font-family: Press Start 2P'>Toast's Rabbit Roundup</h2>
-        <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going.</p>
-        <figure>
-            <a href="legend_of_toast.html"><img src="images/toast_rabbit_roundup.png" alt="Toasts Rabbit Roundup"></a>
-            <figcaption>From <a href="https://kentuckybenjamin.github.io/">Benjamin Gaines</a> | Merry Christmas, Sora!</figcaption>
-        </figure>
-
-    </header>
+    <main>
+        <center>
+            <h2>Toasts Rabbit Roundup</h2>
+        </center>
+        <center>
+            <p>Aww shucks! The rabbits are loose again. Toast is on the job rounding them up, but he needs your help getting to them before the cyotes do. Can you help Toast find his way through the barnyard to get them all? Click the pic to get going.</p>
+        </center>
+        <center>
+            <figure>
+                <a href="legend_of_toast.html"><img src="images/toast_rabbit_roundup.png" alt="Toasts Rabbit Roundup"></a>
+                <figcaption>From <a href="https://kentuckybenjamin.github.io/">Benjamin Gaines</a> | Merry Christmas, Sora!</figcaption>
+            </figure>
+        </center>
+    </main>
 
 </body>
 
